[project]
name = "likelion14"
version = "0.1.0"
description = ""
authors = [
    {name = "sangwon5579",email = "chosw0410@cau.ac.kr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.3,<7.0.0)"
]

[tool.poetry]
packages = [{include = "likelion14", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
